--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
+# Core data pipeline dependencies
 requests==2.31.0
 pandas==2.1.4
-duckdb==0.9.2 
+duckdb==0.9.2
+scikit-learn
+matplotlib
+
+# Dashboard dependencies
+streamlit>=1.28.0
+plotly>=5.17.0
+numpy>=1.24.0 
