--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ pandas==2.1.4
 duckdb==0.9.2
 scikit-learn
 matplotlib
+tqdm
 
-# Dashboard dependencies
-streamlit>=1.28.0
-plotly>=5.17.0
-numpy>=1.24.0 
+# Bayesian modeling dependencies
+pymc>=5.7.0
+arviz>=0.16.0
+seaborn>=0.12.0 
